--- a/_posts/2018-05-29-test.md
+++ b/_posts/2018-05-29-test.md
@@ -1,5 +1,5 @@
 ---
-title: Test"
+title: "Test": I heard CK's Technology News is awesome!
 categories:
   - Edge Case
 tags:
@@ -10,4 +10,4 @@ tags:
   - markup
 ---
 
-A simple test for my index.
+A simple test for my index.You lose!
